--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="./assets/css/main.css">
     <link rel="stylesheet" href="./reset.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css" />
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 
@@ -31,7 +32,7 @@
             <input type="checkbox" id="menu-btn-check">
             <label for="menu-btn-check" class="menu-btn"><span></span></label>
 
-            <!--ここからメニュー-->
+            <!-- ここからメニュー -->
             <div class="menu-content">
                 <ul>
                     <li>
@@ -64,11 +65,40 @@
 
     </header>
 
+    <!-- ｋｖ　スライダーver -->
+    <!-- <div class="kv">
+        <img class="kvbgimg" src="./img/kv_pc.png" alt="">
+        <img class="kvbgimgsp" src="./img/kv_sp.png" alt="">
+
+        <div class="kvslider-container">
+            <div class="kvslideimg-wrapper">
+                <img src="./img/liver_01.jpg" alt="">
+                <img src="./img/liver_02.jpg" alt="">
+                <img src="./img/liver_03.jpg" alt="">
+                <img src="./img/liver_04.jpg" alt="">
+            </div>
+
+            <div class="kv-text">
+                <p class="kv-txt1">No. 1 on customer support</p>
+                <p class="kv-txt1">If you wanna be a pet <br> liver, this is your place</p>
+                <h1 class="kv-txt2">LIVERS WALL</h1>
+                <p class="kv-txt3">An experience you won’t forget <br> forever!</p>
+            </div>
+
+
+            <div class="kvslideimg-wrapper2">
+                <img src="./img/liver_05.jpg" alt="">
+                <img src="./img/liver_06.jpg" alt="">
+                <img src="./img/liver_07.jpg" alt="">
+                <img src="./img/liver_08.jpg" alt="">
+            </div>
+        </div>
+    </div> -->
 
 
 
 
-    <!-- キーヴィジュアル -->
+    <!-- キーヴィジュアル 通常-->
     <div class="kv">
         <img class="kvbgimg" src="./img/kv_pc.png" alt="">
         <img class="kvbgimgsp" src="./img/kv_sp.png" alt="">
@@ -98,6 +128,7 @@
             </div>
         </div>
     </div>
+
 
 
     <!-- セクションPet Livers -->
@@ -386,7 +417,9 @@
             <div class="c-container">
                 <div class="maxwidth  display">
                     <div class="animation forclient for">
-                        <div class="sph2"><h2>for Client</h2></div>
+                        <div class="sph2">
+                            <h2>for Client</h2>
+                        </div>
                         <p>samplesamplesamplesamplesample <br>
                             samplesamplesamplesamplesample</p>
                         <form action="">
@@ -409,7 +442,9 @@
 
                     </div>
                     <div class="animation forliver for">
-                        <div class="sph2"><h2>for Liver</h2></div>
+                        <div class="sph2">
+                            <h2>for Liver</h2>
+                        </div>
                         <p>Do you wanna use whatsup?<br>
                             Click below!</p>
                         <div class="whatsapp display maxwidth">
@@ -457,7 +492,7 @@
     <script src="./script.js"></script>
 
 
-
+    <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
 </body>
 
 </html>
